tests/neg/i3253.scala
import Test.test

object Test {
  def test = "  " * 10 // error
}
